# redox_benchmark

./: .gitignore  README.md  environment.yml  pyproject.toml
redox/utils/: mlip_utils.py  pyscf_utils.py
results/: results.xlsx
results/Set_A/: AzB_Ox.xyz  AzB_Red_ET1e.xyz  AzB_Red_ET2e.xyz  AzPy_Ox.xyz  AzPy_Red_ET1e.xyz  AzPy_Red_ET2e.xyz  BNSN_Ox.xyz  BNSN_Red_ET1e.xyz  BNSN_Red_ET2e.xyz  BPy_Ox.xyz  BPy_Red_ET1e.xyz  BPy_Red_ET2e.xyz  PhN_Ox.xyz  PhN_Red_ET1e.xyz  PhN_Red_ET2e.xyz  QX_Ox.xyz  QX_Red_ET1e.xyz  QX_Red_ET2e.xyz
results/Set_B/: AQDH12_Ox.xyz  AQDH12_Red_PCET.xyz  AQDH14_Ox.xyz  AQDH14_Red_PCET.xyz  AQDH15_Ox.xyz  AQDH15_Red_PCET.xyz  AQDH18MH_Ox.xyz  AQDH18MH_Red_PCET.xyz  AQDH18_Ox.xyz  AQDH18_Red_PCET.xyz  AQDH26_Ox.xyz  AQDH26_Red_PCET.xyz  AQDH45CA_Ox.xyz  AQDH45CA_Red_PCET.xyz  AQDS15_Ox.xyz  AQDS15_Red_PCET.xyz  AQDS18_Ox.xyz  AQDS18_Red_PCET.xyz  AQDS27_Ox.xyz  AQDS27_Red_PCET.xyz  AQS2DH_Ox.xyz  AQS2DH_Red_PCET.xyz  AQS2NBr_Ox.xyz  AQS2NBr_Red_PCET.xyz  AQS2_Ox.xyz  AQS2_Red_PCET.xyz  AQTH12_Ox.xyz  AQTH12_Red_PCET.xyz  AQTH14_Ox.xyz  AQTH14_Red_PCET.xyz  AQTrHM_Ox.xyz  AQTrHM_Red_PCET.xyz  BQ14DHDCl_Ox.xyz  BQ14DHDCl_Red_PCET.xyz  BQ14DH_Ox.xyz  BQ14DH_Red_PCET.xyz  BQ14TH_Ox.xyz  BQ14TH_Red_PCET.xyz  HQ12DS_Ox.xyz  HQ12DS_Red_PCET.xyz  (+16 more)
results/Set_C/: AQDCl18_Ox.xyz  AQDCl18_Red_ET1e.xyz  AQDCl18_Red_PCET.xyz  AQ_Ox.xyz  AQ_Red_ET1e.xyz  AQ_Red_PCET.xyz  BQ12DtBu35_Ox.xyz  BQ12DtBu35_Red_ET1e.xyz  BQ12DtBu35_Red_PCET.xyz  BQ12TCl_Ox.xyz  BQ12TCl_Red_ET1e.xyz  BQ12TCl_Red_PCET.xyz  BQ12TF_Ox.xyz  (+62 more)
scripts/: run_mace.py  run_pyscf.py
